Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16471

mysqldump throws "Variable 'sql_mode' can't be set to the value of 'NULL' (1231)"

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.3.7
    • 10.3.8
    • Backup
    • CentOS Linux release 7.3.1611 (3.10.0-514.26.2.el7.x86_64)

    Description

      After upgrading to MariaDB 10.3.7 am not able to take backup using mysqldump;

      Steps to reproduce:

      MariaDB [(none)]> create database testdb;
      Query OK, 1 row affected (0.001 sec)
       
      MariaDB [(none)]> use testdb;
      Database changed
       
      MariaDB [testdb]> create table test123 (c1 varchar(10));
      Query OK, 0 rows affected (0.004 sec)
       
      #mysqldump -uroot -pxxxxxxxx --port=3306 --databases testdb  >  testdb.sql
       
      mysqldump: Couldn't execute '/*!40100 SET @@SQL_MODE='' */': Variable 'sql_mode' can't be set to the value of 'NULL' (1231)
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              deepakp DP (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.